<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:orientation="vertical"
           android:padding="30dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/app_name"
                android:textSize="28sp" />

            <!-- Sub Title -->
            <TextView
                android:id="@+id/LoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/lbl_login_title"
                android:textSize="16sp"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"
               android:orientation="vertical"
               android:padding="30dp">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/inter_light"
                android:hint="@string/txt_email_hint"
                android:inputType="text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_light"
                android:hint="@string/txt_password_hint"
                android:inputType="textPassword"
                android:textSize="16sp"/>

           </LinearLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_light"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/login"
                android:textSize="20sp"
                app:strokeColor="@color/theme_color"
                app:strokeWidth="2dp"
                />
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/login_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/login_with"
                android:textColor="@color/white"
                android:textSize="16sp"
                />


        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <!-- Google Login Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnGoogleLogin"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="250dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:elevation="2dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/google"
                    android:textSize="16sp"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="28dp"
                    app:icon="@drawable/google"
                    app:iconGravity="textStart"
                    app:iconPadding="12dp"
                    app:iconSize="24dp"
                    app:iconTint="@null"
                    app:strokeWidth="0dp"/>

                <!-- Facebook Login Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFacebookLogin"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="250dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:elevation="2dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/facebook"
                    android:textSize="16sp"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="28dp"
                    app:icon="@drawable/facebook"
                    app:iconGravity="textStart"
                    app:iconPadding="12dp"
                    app:iconSize="26dp"
                    app:iconTint="@null"
                    app:strokeWidth="0dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    >

                    <TextView
                        android:id="@+id/sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/inter_light"
                        android:text="@string/Sign"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:id="@+id/txtSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/Sign_up"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        />

                </LinearLayout>

            </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
