<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/upside_down"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintDimensionRatio="1:1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:orientation="vertical"
           android:padding="30dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/app_name"
                android:textSize="28sp"
                android:paddingTop="270dp"/>

            <!-- Sub Title -->
            <TextView
                android:id="@+id/LoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/forgot_psw_title"
                android:textSize="18sp"
                android:padding="30dp"
                android:gravity="center"/>

           <!-- Code Input Fields -->
           <LinearLayout
               android:id="@+id/codeInputLayout"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="24dp"
               android:orientation="horizontal"
               android:gravity="center">


               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="40dp"
                   android:layout_height="55dp"
                   android:layout_margin="4dp"
                   app:boxBackgroundMode="outline"
                   app:boxStrokeWidth="1dp"
                   app:boxStrokeColor="@color/black"
                   app:boxCornerRadiusTopStart="8dp"
                   app:boxCornerRadiusTopEnd="8dp"
                   app:boxCornerRadiusBottomStart="8dp"
                   app:boxCornerRadiusBottomEnd="8dp">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/code1.1"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:gravity="center"
                       android:inputType="number"
                       android:maxLength="1"
                       android:textSize="18sp" />
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="40dp"
                   android:layout_height="55dp"
                   android:layout_margin="4dp"
                   app:boxBackgroundMode="outline"
                   app:boxStrokeWidth="1dp"
                   app:boxStrokeColor="@color/black"
                   app:boxCornerRadiusTopStart="8dp"
                   app:boxCornerRadiusTopEnd="8dp"
                   app:boxCornerRadiusBottomStart="8dp"
                   app:boxCornerRadiusBottomEnd="8dp">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/code1.2"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:gravity="center"
                       android:inputType="number"
                       android:maxLength="1"
                       android:textSize="18sp" />
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="40dp"
                   android:layout_height="55dp"
                   android:layout_margin="4dp"
                   app:boxBackgroundMode="outline"
                   app:boxStrokeWidth="1dp"
                   app:boxStrokeColor="@color/black"
                   app:boxCornerRadiusTopStart="8dp"
                   app:boxCornerRadiusTopEnd="8dp"
                   app:boxCornerRadiusBottomStart="8dp"
                   app:boxCornerRadiusBottomEnd="8dp">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/code1.3"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:gravity="center"
                       android:inputType="number"
                       android:maxLength="1"
                       android:textSize="18sp" />
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="40dp"
                   android:layout_height="55dp"
                   android:layout_margin="4dp"
                   app:boxBackgroundMode="outline"
                   app:boxStrokeWidth="1dp"
                   app:boxStrokeColor="@color/black"
                   app:boxCornerRadiusTopStart="8dp"
                   app:boxCornerRadiusTopEnd="8dp"
                   app:boxCornerRadiusBottomStart="8dp"
                   app:boxCornerRadiusBottomEnd="8dp">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/code1.4"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:gravity="center"
                       android:inputType="number"
                       android:maxLength="1"
                       android:textSize="18sp" />
               </com.google.android.material.textfield.TextInputLayout>

               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="40dp"
                   android:layout_height="55dp"
                   android:layout_margin="4dp"
                   app:boxBackgroundMode="outline"
                   app:boxStrokeWidth="1dp"
                   app:boxStrokeColor="@color/black"
                   app:boxCornerRadiusTopStart="8dp"
                   app:boxCornerRadiusTopEnd="8dp"
                   app:boxCornerRadiusBottomStart="8dp"
                   app:boxCornerRadiusBottomEnd="8dp">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/code1.5"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:gravity="center"
                       android:inputType="number"
                       android:maxLength="1"
                       android:textSize="18sp" />
               </com.google.android.material.textfield.TextInputLayout>

           </LinearLayout>

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   >

                   <TextView
                       android:id="@+id/login_with"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="20dp"
                       android:fontFamily="@font/inter_bold"
                       android:text="@string/resend_pin"
                       android:textColor="@color/black"
                       android:textSize="14sp"
                       />





           </LinearLayout>

                <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/cont"
                android:textSize="20sp"
                app:strokeColor="@color/theme_color"
                app:strokeWidth="2dp"
                />
            </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
